Salesforce LWC/force-app/main/default/objects/Cricketers__c/Cricketers__c.object-meta.xml
<CustomObject>
    <label>Cricketers</label>
    <nameField>
        <label>Cricketers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cricketers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>