Salesforce LWC/force-app/main/default/objects/Cricketers__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cricketers</relationshipLabel>
    <relationshipName>Cricketers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>