Salesforce LWC/force-app/main/default/objects/Cricketers__c/fields/Availabe_In_Which_Country__c.field-meta.xml
<CustomField>
    <fullName>Availabe_In_Which_Country__c</fullName>
    <label>Availabe In Which Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>