Salesforce LWC/force-app/main/default/objects/Cricketers__c/fields/Cricketer_s_Country__c.field-meta.xml
<CustomField>
    <fullName>Cricketer_s_Country__c</fullName>
    <label>Cricketer&apos;s Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>