Salesforce LWC/force-app/main/default/objects/Cricketers__c/fields/Images__c.field-meta.xml
<CustomField>
    <fullName>Images__c</fullName>
    <formula>IMAGE(Image_Url__c,Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Images</label>
    <type>Text</type>
</CustomField>