Salesforce LWC/force-app/main/default/objects/Cricketers__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>British</fullName>
            </value>
            <value>
                <fullName>Pakisthan</fullName>
            </value>
            <value>
                <fullName>Itely</fullName>
            </value>
            <value>
                <fullName>bangladesh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>