Salesforce LWC/force-app/main/default/objects/Cricketers__c/fields/Runs__c.field-meta.xml
<CustomField>
    <fullName>Runs__c</fullName>
    <label>Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>